examples/test/testpolicy15960.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15960
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key41: value42
      key40: value39
      key49: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value43
      podSelector:
        matchLabels:
          key33: value28
          key40: value29
          key41: value24
